--- a/maybank-02/cluster.yaml
+++ b/maybank-02/cluster.yaml
@@ -12,3 +12,9 @@ nodeGroups:
     volumeSize: 80
     ssh:
       allow: true # will use ~/.ssh/id_rsa.pub as the default ssh key
+  - name: ng-2
+    instanceType: t3.medium
+    desiredCapacity: 3
+    volumeSize: 80
+    ssh:
+      allow: true # will use ~/.ssh/id_rsa.pub as the default ssh key
