--- a/maybank-02/02-01b-sinatra-app.yaml
+++ b/maybank-02/02-01b-sinatra-app.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: sinatra
-        image: "gcr.io/google-samples/hello-app:2.0"
+        image: "erikap/ruby-sinatra:1.1.0"
 
 ---
 
@@ -32,5 +32,5 @@ spec:
     app: sinatra
   ports:
   - port: 80
-    targetPort: 8080
+    targetPort: 80
     protocol: TCP
