--- a/maybank-02/02-03-ingress.yaml
+++ b/maybank-02/02-03-ingress.yaml
@@ -17,13 +17,13 @@ spec:
           path: "/"
           backend:
             service:
-              name: hello-service
+              name: sinatra-service
               port:
                 number: 80
         - pathType: Prefix
-          path: "/sinatra"
+          path: "/hello"
           backend:
             service:
-              name: sinatra-service
+              name: hello-service
               port:
                 number: 80
