--- a/maybank-02/02-01b-sinatra-configmap.yaml
+++ b/maybank-02/02-01b-sinatra-configmap.yaml
@@ -1,4 +1,16 @@
 apiVersion: v1
+kind: Secret
+metadata:
+  name: backend-cred-01
+  namespace: dev
+type: Opaque
+stringData:
+  USERNAME: admin123
+  PASSWORD: t0p-Secret
+
+---
+
+apiVersion: v1
 kind: ConfigMap
 metadata:
   name: sinatra-app-files
@@ -55,57 +67,3 @@ data:
       </pre>
     </body>
     </html>
-
----
-
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: sinatra-app
-  namespace: dev
-spec:
-  selector:
-    matchLabels:
-      app: sinatra
-  replicas: 2
-  template:
-    metadata:
-      labels:
-        app: sinatra
-    spec:
-      containers:
-      - name: sinatra
-        image: "tongueroo/sinatra"
-        ports:
-        - containerPort: 8080
-        volumeMounts:
-        - name: sinatra-app-files-volume
-          mountPath: /app
-        volumeMounts:
-        - name: sinatra-app-views-files-volume
-          mountPath: /app/views
-      volumes:
-        - name: sinatra-app-files-volume
-          configMap:
-            name: sinatra-app-files
-        - name: sinatra-app-views-files-volume
-          configMap:
-            name: sinatra-app-views-files
-
----
-
-apiVersion: v1
-kind: Service
-metadata:
-  name: sinatra-service
-  namespace: dev
-  labels:
-    app: sinatra
-spec:
-  type: ClusterIP
-  selector:
-    app: sinatra
-  ports:
-  - port: 80
-    targetPort: 8080
-    protocol: TCP
