--- a/maybank-02/02-01b-sinatra-configmap.yaml
+++ b/maybank-02/02-01b-sinatra-configmap.yaml
@@ -22,24 +22,12 @@ data:
 
     class SinatraApp < Sinatra::Base
       get "/" do
-        # Print X-Forwarded-* headers
-        # puts "X-Forwarded-Host: #{request.env["HTTP_X_FORWARDED_HOST"].inspect}"
-        # puts "X-Forwarded-For: #{request.env["HTTP_X_FORWARDED_FOR"].inspect}"
-        # puts "X-Forwarded-Proto: #{request.env["HTTP_X_FORWARDED_PROTO"].inspect}"
-        # puts "X-Forwarded-Port: #{request.env["HTTP_X_FORWARDED_PORT"].inspect}"
-        # puts "X-Real-IP: #{request.env["HTTP_X_REAL_IP"].inspect}"
-        # puts "Server Hostname: #{Socket.gethostname}"
-        # puts "Request Host: #{request.host}"
-
         query_params = request.query_string
         formatted_params = query_params.empty? ? "" : "?" + query_params
         client_ip = request.ip
         request_host = request.host
         server_hostname = Socket.gethostname
         puts "#{Time.now} - #{client_ip} - #{request_host} - #{server_hostname} -GET /#{formatted_params}"
-        # puts "some message with a newline\nand more text"
-
-        puts "test 123 ..."
 
         erb :index
       end
@@ -58,16 +46,17 @@ data:
     <html lang="en">
     <head>
       <meta charset="UTF-8">
-      <title>Sinatra Demo</title>
+      <title>Cloud Developer Assessment 02</title>
       <link rel="stylesheet" href="/styles.css">
     </head>
     <body>
-      <h1>Hello, Sinatra! Test 1</h1>
-      <img src="/jelly-beans.jpg" />
       <pre>
-        Client IP: <%= request.ip %>
         ENV['BACKEND_01_USERNAME']: <%= ENV['BACKEND_01_USERNAME'] %>
         ENV['BACKEND_01_PASSWORD']: <%= ENV['BACKEND_01_PASSWORD'] %>
+
+        request.ip: <%= request.ip %>
+        request.host: <%= request.host %>
+        Socket.gethostname: <%= Socket.gethostname %>
       </pre>
     </body>
     </html>
